--- a/test/makefile
+++ b/test/makefile
@@ -4,6 +4,8 @@ template_create_all: build_all template.create
 
 template_delete_all: build_all template.delete
 
+release_start_all: build_all release.start
+
 template.start_release:
 	goxlr template start -n 'test template' -t 'test release'
 
@@ -22,6 +24,22 @@ template.show:
 template.list:
 	goxlr template list
 
+release.start: build_all template.create
+	goxlr release start -t "test_release" -T test_template -S true --schedule 8
+
+release.list.long: build_all
+	goxlr release list -l
+
+release.list.short: build_all
+	goxlr release list
+release.list.json.short: build_all
+	goxlr release list -j
+
+release.list.json.long: build_all
+	goxlr release list -j -l
+
+release.list: release.list.long release.list.short release.list.json.short release.list.json.long
+	
 build_all: xlr.build goxlr.build
 
 goxlr.build:
